k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nestjs-app
  labels:
    name: nestjs-app
    app: nestjs-app
